# docs/swagger.json
@@ -21,14 +21,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "format": "email",
-                        "description": "Email of the admin",
-                        "name": "email",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
                         "format": "token",
                         "description": "Token of the admin",
                         "name": "token",
@@ -39,6 +31,18 @@
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "type": "string"
                         }
@@ -59,25 +63,25 @@
                 "summary": "Endpoint used to save an admin",
                 "parameters": [
                     {
-                        "type": "string",
-                        "format": "email",
-                        "description": "Email of the admin",
-                        "name": "email",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "format": "password",
-                        "description": "Password of the admin",
-                        "name": "password",
-                        "in": "query",
-                        "required": true
+                        "description": "Email and password of the admin",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "{ \"email\": \"admin@gmail.com\", \"password\": \"admin\" }"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "type": "string"
                         }
@@ -120,6 +124,18 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -139,25 +155,37 @@
                 "summary": "Endpoint used to log in an admin",
                 "parameters": [
                     {
-                        "type": "string",
-                        "format": "email",
-                        "description": "Email of the admin",
-                        "name": "email",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "format": "password",
-                        "description": "Password of the admin",
-                        "name": "password",
-                        "in": "query",
-                        "required": true
+                        "description": "Email and password of the admin",
+                        "name": "loginRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "{ \"email\": \"admin@gmail.com\", \"password\": \"admin\" }"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
