# structs/structs.go
@@ -5,3 +5,8 @@ type AdminStruct struct {
 	Password  string
 	TimeStamp int64
 }
+
+type Credentials struct {
+	Email    string `json:"email" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
